Investigate and fix acceptance tests that work locally, but not in the Github workflow.
* Add a small delay to test; trigger a blur.

* Add explicit verification that input field contains expected value before proceeding

* Clear input field before filling to prevent value overlap issues on Azure

* Make input delay configurable via TEST_INPUT_DELAY_MS environment variable, default 100ms.

* Add configurable delay after CompleteExistingWorkOrder to ensure save operation completes before database query

* Updating timestamp.

--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -568,6 +568,7 @@ jobs:
           $env:ConnectionStrings__SqlConnectionString = "${{ env.CONTAINER_APP_CONNECTION_STRING }}"
           $env:ApplicationBaseUrl = "${{ env.CONTAINER_APP_URL }}"
           $env:StartLocalServer = "false"
+          $env:TEST_INPUT_DELAY_MS = ""
           dotnet test $acceptanceTestProject /p:CopyLocalLockFileAssemblies=true /p:CollectCoverage=true --nologo `
             --no-restore --logger:trx --results-directory $resultsDirectory --no-build `
             -v $verbosity --configuration ${{ env.BuildConfiguration }} --settings:$runSettingsPath `
