--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   build-linux:
     name: Build and Test on Linux
-    if: github.event_name == 'workflow_dispatch' || startsWith(github.event.pull_request.head.ref, 'feature/')
+    if: github.event_name == 'workflow_dispatch' || startsWith(github.event.pull_request.head.ref, 'feature/') || startsWith(github.event.pull_request.head.ref, 'copilot/')
     runs-on: ubuntu-latest
     permissions:
       contents: read
