--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - master
     types: [opened, synchronize, reopened, ready_for_review]
-  workflow_run:
-    workflows: ["Claude Code", "Claude Code Review"]
-    types:
-      - completed
   workflow_dispatch:
 
 env:
@@ -18,18 +14,11 @@ env:
 jobs:
   build-linux:
     name: Build and Test on Linux
-    if: 
-      github.event_name == 'workflow_dispatch' || 
-      (github.event_name == 'pull_request' && !github.event.pull_request.draft && startsWith(github.event.pull_request.head.ref, 'feature/') && !startsWith(github.event.pull_request.title, '[WIP]')) ||
-      (github.event_name == 'pull_request' && !github.event.pull_request.draft && startsWith(github.event.pull_request.head.ref, 'copilot/') && !startsWith(github.event.pull_request.title, '[WIP]'))
-    concurrency:
-      group: build-linux
-      cancel-in-progress: false
+    if: github.event_name == 'workflow_dispatch' || startsWith(github.event.pull_request.head.ref, 'feature/')
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-      pull-requests: read
     env:
       BUILD_CONFIGURATION: Release
     
@@ -37,28 +26,6 @@ jobs:
       # Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.workflow_run.head_sha || github.event.pull_request.head.sha || github.sha }}
-
-      # Check PR approval status for copilot branches
-      - name: Check PR approval status
-        if: github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'copilot/')
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_NUMBER: ${{ github.event.pull_request.number }}
-        run: |
-          echo "Checking approval status for PR #$PR_NUMBER on copilot branch"
-          
-          # Check if PR has at least one approval
-          APPROVALS=$(gh pr view $PR_NUMBER --json reviews --jq '[.reviews[] | select(.state == "APPROVED")] | length')
-          
-          if [ "$APPROVALS" -eq 0 ]; then
-            echo "PR #$PR_NUMBER has not been approved yet. Build requires human approval for copilot branches."
-            echo "Please wait for a reviewer to approve the PR before the integration build runs."
-            exit 1
-          fi
-          
-          echo "✓ PR #$PR_NUMBER has $APPROVALS approval(s). Proceeding with build."
 
       # Install .NET SDK 10.0.100
       - name: Setup .NET SDK 10.0.100
@@ -479,8 +446,8 @@ jobs:
         with:
           project: '${{ vars.OCTOPUS_PROJECT }}'
           release_number: "${{ env.VERSION }}"
-          git_ref: ${{ (github.ref_type == 'tag' && github.event.repository.default_branch ) || github.event.workflow_run.head_branch || (github.head_ref || github.ref) }}
-          git_commit: ${{ github.event.after || github.event.pull_request.head.sha || github.event.workflow_run.head_sha }}
+          git_ref: ${{ (github.ref_type == 'tag' && github.event.repository.default_branch ) || (github.head_ref || github.ref) }}
+          git_commit: ${{ github.event.after || github.event.pull_request.head.sha }}
 
       - name: Deploy Octopus Release to TDD
         id: start-deploy-to-tdd
@@ -549,7 +516,6 @@ jobs:
           ConnectionStrings__SqlConnectionString: ${{ env.CONTAINER_APP_CONNECTION_STRING }}
           ApplicationBaseUrl: ${{ env.CONTAINER_APP_URL }}
           StartLocalServer: "false"
-          TEST_INPUT_DELAY_MS: "1000"
 
         run: |
          
@@ -598,11 +564,11 @@ jobs:
           # Now run the acceptance tests
           Write-Host "Running acceptance tests on TDD at ${{ env.ApplicationBaseUrl }}, settings file: $runSettingsPath"
 
-          # Re-set environment variables after build.ps1 might havecleared them
+          # Re-set environment variables after build.ps1 cleared them
           $env:ConnectionStrings__SqlConnectionString = "${{ env.CONTAINER_APP_CONNECTION_STRING }}"
           $env:ApplicationBaseUrl = "${{ env.CONTAINER_APP_URL }}"
           $env:StartLocalServer = "false"
-          $env:TEST_INPUT_DELAY_MS = "${{ env.TEST_INPUT_DELAY_MS }}"
+          $env:TEST_INPUT_DELAY_MS = ""
           dotnet test $acceptanceTestProject /p:CopyLocalLockFileAssemblies=true /p:CollectCoverage=true --nologo `
             --no-restore --logger:trx --results-directory $resultsDirectory --no-build `
             -v $verbosity --configuration ${{ env.BuildConfiguration }} --settings:$runSettingsPath `
