--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -14,7 +14,10 @@ env:
 jobs:
   build-linux:
     name: Build and Test on Linux
-    if: github.event_name == 'workflow_dispatch' || startsWith(github.event.pull_request.head.ref, 'feature/')
+    if: 
+      github.event_name == 'workflow_dispatch' || 
+      (github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'feature/')) ||
+      (github.event_name == 'pull_request' && !github.event.pull_request.draft && startsWith(github.event.pull_request.head.ref, 'copilot/'))
     runs-on: ubuntu-latest
     permissions:
       contents: read
