We lost the TEST_INPUT_DELAY_MS.  Add it back.

--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -519,6 +519,7 @@ jobs:
           ConnectionStrings__SqlConnectionString: ${{ env.CONTAINER_APP_CONNECTION_STRING }}
           ApplicationBaseUrl: ${{ env.CONTAINER_APP_URL }}
           StartLocalServer: "false"
+          TEST_INPUT_DELAY_MS: "1500"
 
         run: |
          
