--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -1,5 +1,5 @@
 name: Integration Build
-run-name: "1.3.${{ github.run_number }}"
+run-name: "1.3.${{ github.run_number }} • ${{github.event.pull_request.title}}"
 on:
   # Shown in the header of the run before jobs start
   pull_request:
