--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -1,7 +1,9 @@
 name: Integration Build
 run-name: "1.3.${{ github.run_number }} • ${{github.event.pull_request.title}}"
 on:
-  # Shown in the header of the run before jobs start
+  # Shown in the header of the run before jobs star
+  push:
+   branches: ['**']
   pull_request:
     branches:
       - master
