--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -1,15 +1,14 @@
 name: Integration Build
 run-name: "1.3.${{ github.run_number }} • ${{github.event.pull_request.title}}"
 on:
-  # Shown in the header of the run before jobs star
   push:
-   branches: ['**']
+    branches: ['**']
   pull_request:
-    branches:
-      - master
-    types: [opened, synchronize, reopened, ready_for_review]
+    branches: ['**']
   workflow_dispatch:
-
+concurrency:
+  group: build-${{ github.ref }}
+  cancel-in-progress: true
 env:
   MAJOR_VERSION: 1
   MINOR_VERSION: 3
@@ -17,7 +16,6 @@ env:
 jobs:
   build-linux:
     name: Build and Test on Linux
-    if: github.event_name == 'workflow_dispatch' || startsWith(github.event.pull_request.head.ref, 'feature/')
     runs-on: ubuntu-latest
     permissions:
       contents: read
