Share the logic to Drop and Update with the Rebuild command.

--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -15,8 +15,10 @@
         <PackageReference Include="DbUp" Version="5.0.41"/>
         <PackageReference Include="dbup-sqlserver" Version="6.0.16"/>
         <PackageReference Include="JetBrains.Annotations" Version="2025.2.2"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
         <PackageReference Include="Spectre.Console" Version="0.54.0"/>
         <PackageReference Include="Spectre.Console.Cli" Version="0.53.0"/>
+        <PackageReference Include="Spectre.Console.Registrars.Microsoft-Di" Version="0.6.0" />
 
     </ItemGroup>
 
