--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -1,5 +1,5 @@
 name: Integration Build
-run-name: "1.3.${{ github.run_number }} • ${{github.event.pull_request.title}}"
+run-name: "1.3.${{ github.run_number }} • ${{ github.event.pull_request.title != '' && github.event.pull_request.title || github.head_ref || github.ref_name }}"
 on:
   push:
     branches: ['**']
