--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -26,13 +26,15 @@ jobs:
     steps:
       # Checkout code
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6.0.1
 
-      # Install .NET SDK 10.0.100
-      - name: Setup .NET SDK 10.0.100
+      - name: Setup .NET SDK v6 and 10
         uses: actions/setup-dotnet@v5.0.1
         with:
-          dotnet-version: '10.0.100'
+          cache: true
+          dotnet-version: | 
+            6.0.x
+            10.0.100
           
       # Set version environment variable
       - name: Set Version
@@ -41,29 +43,6 @@ jobs:
           echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
           echo "VERSION=$version" >> $GITHUB_ENV
           echo "Build version: $version"
-          
-      # Install .NET SDK 6.0 (required by Octopus CLI tool - includes runtime)
-      - name: Setup .NET SDK 6.0
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '6.0.x'
-
-      # Verify .NET 6.0 runtime is available (required by dotnet-octo tool)
-      - name: Verify .NET 6.0 runtime
-        run: |
-          echo "Installed runtimes:"
-          dotnet --list-runtimes
-          echo ""
-          echo "Checking for .NET 6.0 runtime:"
-          if dotnet --list-runtimes | grep -q "Microsoft.NETCore.App 6.0"; then
-            echo "✓ .NET 6.0 runtime is available"
-          else
-            echo "✗ .NET 6.0 runtime not found - attempting to install runtime explicitly"
-            # Try installing runtime explicitly if SDK installation didn't include it
-            curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --runtime dotnet --version 6.0.0
-            export PATH="$HOME/.dotnet:$PATH"
-            dotnet --list-runtimes
-          fi
 
       - name: Run CI Build 
         shell: pwsh
@@ -290,7 +269,7 @@ jobs:
     steps:
       # Checkout code
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6.0.1
 
       # Set version environment variable (same as build-linux job)
       - name: Set Version
@@ -299,13 +278,6 @@ jobs:
           echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
           echo "VERSION=$version" >> $GITHUB_ENV
           echo "Build version: $version"
-
-      # Install .NET SDK 10.0.100
-      - name: Setup .NET SDK 10.0.100
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '10.0.100'
-
 
       # Download NuGet packages from build-linux job
       - name: Download NuGet Packages
@@ -384,6 +356,14 @@ jobs:
           # Clean up
           rm -rf ./package-extract ./packages
 
+
+      # Login to Azure
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          # TODO:  Need to create the AZURE_CREDENTIALS secret in the GitHub repository.
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       # Build Docker image
       - name: Build Docker image
         run: |
@@ -391,12 +371,6 @@ jobs:
           docker build -f Dockerfile -t churchbulletingithubacr.azurecr.io/churchbulletin.ui:${IMAGE_TAG} .
           docker tag churchbulletingithubacr.azurecr.io/churchbulletin.ui:${IMAGE_TAG} churchbulletingithubacr.azurecr.io/churchbulletin.ui:latest
 
-      # Login to Azure
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          # TODO:  Need to create the AZURE_CREDENTIALS secret in the GitHub repository.
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       # Login to Azure Container Registry
       - name: Login to ACR
@@ -424,10 +398,14 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: actions/setup-node@v6
-      - name: Setup .NET SDK 10.0.100
-        uses: actions/setup-dotnet@v5
+
+      - name: Setup .NET SDK v6 and 10
+        uses: actions/setup-dotnet@v5.0.1
         with:
-          dotnet-version: '10.0.100'
+          cache: true
+          dotnet-version: | 
+            6.0.x
+            10.0.100
       
       - name: Set Version
         shell: pwsh
@@ -477,7 +455,7 @@ jobs:
           timeout_after: 1800          
 
       - name: Login to Azure
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
   
@@ -598,7 +576,6 @@ jobs:
       name: UAT
     
     steps:
-      - uses: actions/checkout@v4
       - name: Set Version
         run: |
           version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }}"
@@ -639,7 +616,6 @@ jobs:
       name: Prod
     
     steps:
-      - uses: actions/checkout@v4
       - name: Set Version
         run: |
           version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }}"
