--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -1,11 +1,18 @@
 name: Integration Build
 run-name: "1.3.${{ github.run_number }} • ${{ github.event.pull_request.title != '' && github.event.pull_request.title || github.head_ref || github.ref_name }}"
 on:
+  pull_request:
+    branches:
+      - master
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - review_requested
   push:
     branches: ['**']
-  pull_request:
-    branches: ['**']
   workflow_dispatch:
+
 concurrency:
   group: build-${{ github.ref }}
   cancel-in-progress: true
@@ -17,7 +24,10 @@ jobs:
   build-linux:
     name: Integration Build
     runs-on: ubuntu-latest
-    environment: TDD
+    if: |
+      github.event_name == 'workflow_dispatch' || 
+      github.event_name == 'pull_request' ||
+      (github.event_name == 'push' && github.actor != 'github-actions[bot]' && !startsWith(github.ref, 'refs/heads/copilot-'))
     permissions:
       contents: read
       packages: write
@@ -45,7 +55,6 @@ jobs:
           echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
           echo "VERSION=$version" >> $GITHUB_ENV
           echo "Build version: $version"
-          echo "${ env.BUILD_BUILDNUMBER }" > build/build_version.txt
 
       - name: Run CI Build 
         shell: pwsh
@@ -57,6 +66,7 @@ jobs:
           Write-Host "Running CI Build"
           . ./build.ps1
           Invoke-CIBuild
+          echo "${ env.BUILD_BUILDNUMBER }" > build/build_version.txt
 
       # Publish test results
       - name: Test Reporter
