--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -13,9 +13,9 @@ on:
     branches: ['**']
   workflow_dispatch:
 
-concurrency:
-  group: build-${{ github.ref }}
-  cancel-in-progress: true
+# concurrency:
+#   group: build-${{ github.ref }}
+#   cancel-in-progress: true
 env:
   MAJOR_VERSION: 1
   MINOR_VERSION: 3
@@ -27,7 +27,7 @@ jobs:
     if: |
       github.event_name == 'workflow_dispatch' || 
       github.event_name == 'pull_request' ||
-      (github.event_name == 'push' && github.actor != 'github-actions[bot]' && !startsWith(github.ref, 'refs/heads/copilot-'))
+      (github.event_name == 'push' && github.actor != 'Copilot' && !startsWith(github.ref, 'refs/heads/copilot/'))
     permissions:
       contents: read
       packages: write
@@ -64,8 +64,9 @@ jobs:
           version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }}"
           echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
           echo "VERSION=$version" >> $GITHUB_ENV
+          echo "$version" > build_version.txt
           echo "Build version: $version"
-
+          
       - name: Run CI Build 
         shell: pwsh
         env:
@@ -76,7 +77,7 @@ jobs:
           Write-Host "Running CI Build"
           . ./build.ps1
           Invoke-CIBuild
-          echo "${ env.BUILD_BUILDNUMBER }" > build_version.txt
+
 
       # Publish test results
       - name: Test Reporter
