--- a/.github/workflows/deploy-to-prod.yml
+++ b/.github/workflows/deploy-to-prod.yml
@@ -16,17 +16,18 @@ env:
 jobs:
   deploy-to-prod:
     name: Prod
-    # Gate on successful completion of Workflow A (implies deploy-to-tdd succeeded)
+    # Gate on successful completion of the Deploy to UAT workflow or manual trigger
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     environment:
       name: Prod
     
     steps:
-      - name: Retrieve build version
+      - name: Retrieve build version from the Integration Build workflow
         uses: actions/download-artifact@v4
         with:
-          name: churchbulletin-nuget-packages
+          name: build-version
+          run-id: ${{ github.event.workflow_run.id }}
 
       - name: Set Version
         run: |
