--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -1,21 +1,14 @@
 name: Integration Build
 run-name: "1.3.${{ github.run_number }} • ${{ github.event.pull_request.title != '' && github.event.pull_request.title || github.head_ref || github.ref_name }}"
 on:
-  pull_request:
-    branches:
-      - master
-    types:
-      - opened
-      - synchronize
-      - reopened
-      - review_requested
   push:
     branches: ['**']
+  pull_request:
+    branches: ['**']
   workflow_dispatch:
-
-# concurrency:
-#   group: build-${{ github.ref }}
-#   cancel-in-progress: true
+concurrency:
+  group: build-${{ github.ref }}
+  cancel-in-progress: true
 env:
   MAJOR_VERSION: 1
   MINOR_VERSION: 3
@@ -24,11 +17,6 @@ jobs:
   build-linux:
     name: Integration Build
     runs-on: ubuntu-latest
-    # Run this job only for PRs, manual triggers, and non-Copilot pushes. Work in Progress.
-    if: |
-      github.event_name == 'workflow_dispatch' || 
-      github.event_name == 'pull_request' ||
-      (github.event_name == 'push' && github.actor != 'Copilot' && !startsWith(github.ref, 'refs/heads/copilot/'))
     permissions:
       contents: read
       packages: write
@@ -36,6 +24,7 @@ jobs:
       BUILD_CONFIGURATION: Release
     
     steps:
+      # Checkout code
       - name: Checkout code
         uses: actions/checkout@v6.0.1
 
@@ -47,7 +36,9 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '6.0.x'
+
           
+      # Set version environment variable
       - name: Set Version
         run: |
           version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }}"
@@ -55,7 +46,7 @@ jobs:
           echo "VERSION=$version" >> $GITHUB_ENV
           echo "$version" > build_version.txt
           echo "Build version: $version"
-          
+
       - name: Run CI Build 
         shell: pwsh
         env:
@@ -114,54 +105,60 @@ jobs:
           . ./build.ps1
           Package-Everything
 
-      # Upload artifacts
-      - name: Upload artifacts
+      # Upload packages as artifacts
+      - name: Upload NuGet Packages
         uses: actions/upload-artifact@v4
         if: success()
         with:
           name: churchbulletin-nuget-packages
-          path: |
-            build/*.nupkg
-            build_version.txt
+          path: build/*.nupkg
+          retention-days: 90
+
+      - name: Upload NuGet Packages
+        uses: actions/upload-artifact@v4
+        if: success()
+        with:
+          name: build-version
+          path: build_version.txt
           retention-days: 90
 
       # Publish packages to GitHub Packages
-      - name: Publish Packages to GitHub Packages
-        if: false
-        env:
-          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          OWNER="${{ github.repository_owner }}"
-          FEED_URL="https://nuget.pkg.github.com/$OWNER/index.json"
+      # - name: Publish Packages to GitHub Packages
+      #   if: false
+      #   env:
+      #     NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   run: |
+      #     OWNER="${{ github.repository_owner }}"
+      #     FEED_URL="https://nuget.pkg.github.com/$OWNER/index.json"
           
-          echo "Configuring GitHub Packages NuGet source..."
-          echo "Owner: $OWNER"
-          echo "Feed URL: $FEED_URL"
+      #     echo "Configuring GitHub Packages NuGet source..."
+      #     echo "Owner: $OWNER"
+      #     echo "Feed URL: $FEED_URL"
           
-          # Remove existing source if it exists
-          dotnet nuget remove source "github" 2>/dev/null || true
+      #     # Remove existing source if it exists
+      #     dotnet nuget remove source "github" 2>/dev/null || true
           
-          # Configure GitHub Packages as a NuGet source
-          # For GitHub Packages, use the owner as username and token as password
-          dotnet nuget add source $FEED_URL \
-            --name "github" \
-            --username $OWNER \
-            --password "$NUGET_AUTH_TOKEN" \
-            --store-password-in-clear-text
+      #     # Configure GitHub Packages as a NuGet source
+      #     # For GitHub Packages, use the owner as username and token as password
+      #     dotnet nuget add source $FEED_URL \
+      #       --name "github" \
+      #       --username $OWNER \
+      #       --password "$NUGET_AUTH_TOKEN" \
+      #       --store-password-in-clear-text
           
-          # Verify source was added
-          echo "Configured NuGet sources:"
-          dotnet nuget list source
+      #     # Verify source was added
+      #     echo "Configured NuGet sources:"
+      #     dotnet nuget list source
           
-          # Publish all packages
-          for package in build/*.nupkg; do
-            if [ -f "$package" ]; then
-              echo "Publishing $package to GitHub Packages..."
-              dotnet nuget push "$package" \
-                --source "github" \
-                --skip-duplicate || echo "Warning: Failed to publish $package (may already exist)"
-            fi
-          done
+      #     # Publish all packages
+      #     for package in build/*.nupkg; do
+      #       if [ -f "$package" ]; then
+      #         echo "Publishing $package to GitHub Packages..."
+      #         dotnet nuget push "$package" \
+      #           --source "github" \
+      #           --skip-duplicate || echo "Warning: Failed to publish $package (may already exist)"
+      #       fi
+      #     done
 
       # Publish packages to Octopus Deploy built-in feed
       - name: Publish Packages to Octopus Deploy
@@ -270,6 +267,7 @@ jobs:
           if ($failedCount -gt 0) {
             Write-Warning "Some packages failed to publish to Octopus Deploy."
           }
+          
 
   docker-build-image-for-churchbulletin-ui:
     name: Publish Release Candidate
@@ -422,11 +420,12 @@ jobs:
         uses: actions/setup-dotnet@v5.0.1
         with:
           dotnet-version: '10.0.100'        
-      
       - name: Setup .NET SDK 6.0
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '6.0.x'
+
+
       
       - name: Set Version
         shell: pwsh
@@ -560,6 +559,8 @@ jobs:
           Write-Host "Installing Playwright browsers from $playwrightScript"
           & pwsh $playwrightScript install --with-deps
           
+          
+          
           # Now run the acceptance tests
           Write-Host "Running acceptance tests on TDD at ${{ env.ApplicationBaseUrl }}, settings file: $runSettingsPath"
 
@@ -581,3 +582,80 @@ jobs:
           name: acceptance-test-results-tdd
           path: build/test/AcceptanceTests/**/*.trx
           retention-days: 30 
+
+
+  deploy-to-uat:
+    name: UAT
+    needs: [deploy-to-tdd]
+    if: success() 
+    runs-on: ubuntu-latest
+    environment:
+      name: UAT
+    
+    steps:
+      - name: Set Version
+        run: |
+          version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }}"
+          echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
+          echo "VERSION=$version" >> $GITHUB_ENV
+          echo "Build version: $version"
+
+      - name: Deploy Octopus Release to UAT
+        uses: OctopusDeploy/deploy-release-action@v3
+        id: start-deploy-to-uat
+        env:
+          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY }}
+          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
+          OCTOPUS_SPACE: ${{ vars.OCTOPUS_SPACE }}
+        with:
+          project: ${{ vars.OCTOPUS_PROJECT }}   
+          release_number: ${{ env.BUILD_BUILDNUMBER }}
+          environments: "UAT"
+
+      - name: Wait for the UAT deployment to complete
+        uses: OctopusDeploy/await-task-action@v3
+        env:
+          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY  }}
+          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
+          OCTOPUS_SPACE: ${{ vars.OCTOPUS_SPACE }}
+        with:
+          server_task_id: ${{ fromJson(steps.start-deploy-to-uat.outputs.server_tasks)[0].serverTaskId }}
+          timeout_after: 1800          
+          
+  deploy-to-prod:
+    name: Prod
+    needs: [deploy-to-uat]
+    if: success() 
+    runs-on: ubuntu-latest
+    environment:
+      name: Prod
+    
+    steps:
+      - name: Set Version
+        run: |
+          version="${{ env.MAJOR_VERSION }}.${{ env.MINOR_VERSION }}.${{ github.run_number }}"
+          echo "BUILD_BUILDNUMBER=$version" >> $GITHUB_ENV
+          echo "VERSION=$version" >> $GITHUB_ENV
+          echo "Build version: $version"
+
+      - name: Deploy Octopus Release to Prod
+        uses: OctopusDeploy/deploy-release-action@v3
+        id: start-deploy-to-prod
+        env:
+          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY }}
+          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
+          OCTOPUS_SPACE: ${{ vars.OCTOPUS_SPACE }}
+        with:
+          project: ${{ vars.OCTOPUS_PROJECT }}   
+          release_number: ${{ env.BUILD_BUILDNUMBER }}
+          environments: "Prod"
+
+      - name: Wait for the Prod deployment to complete
+        uses: OctopusDeploy/await-task-action@v3
+        env:
+          OCTOPUS_API_KEY: ${{ secrets.OCTO_API_KEY  }}
+          OCTOPUS_URL: ${{ secrets.OCTOPUS_URL }}
+          OCTOPUS_SPACE: ${{ vars.OCTOPUS_SPACE }}
+        with:
+          server_task_id: ${{ fromJson(steps.start-deploy-to-prod.outputs.server_tasks)[0].serverTaskId }}
+          timeout_after: 1800          
