--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -6,9 +6,6 @@ on:
   pull_request:
     branches: ['**']
   workflow_dispatch:
-concurrency:
-  group: build-${{ github.ref }}
-  cancel-in-progress: true
 env:
   MAJOR_VERSION: 1
   MINOR_VERSION: 3
@@ -17,6 +14,11 @@ jobs:
   build-linux:
     name: Integration Build
     runs-on: ubuntu-latest
+    concurrency:
+      # Integration Build will be cancelled when new commits arrive on the branch. 
+      # To protect the master branch, use ${{ github.ref != 'refs/heads/main' }} for cancel-in-progress:
+      group: build-${{ github.ref }}
+      cancel-in-progress: true
     permissions:
       contents: read
       packages: write
@@ -106,7 +108,7 @@ jobs:
           Package-Everything
 
       # Upload packages as artifacts
-      - name: Upload NuGet Packages
+      - name: Upload NuGet Package artifacts
         uses: actions/upload-artifact@v4
         if: success()
         with:
@@ -114,7 +116,7 @@ jobs:
           path: build/*.nupkg
           retention-days: 90
 
-      - name: Upload NuGet Packages
+      - name: Upload build_version.txt artifact
         uses: actions/upload-artifact@v4
         if: success()
         with:
@@ -122,7 +124,7 @@ jobs:
           path: build_version.txt
           retention-days: 90
 
-      - name: Publish nupkgs  to GitHub Packages
+      - name: Publish nupkgs to GitHub Packages
         if: success()
         env:
           NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -155,6 +157,8 @@ jobs:
               echo "Publishing $package to GitHub Packages..."
               dotnet nuget push "$package" \
                 --source "github" \
+                --api-key "$NUGET_AUTH_TOKEN" \
+                --timeout 600 \
                 --skip-duplicate || echo "Warning: Failed to publish $package (may already exist)"
             fi
           done
@@ -273,6 +277,11 @@ jobs:
     needs: [build-linux]
     if: success() 
     runs-on: ubuntu-latest
+    concurrency:
+      # Stop publishing a release candidate if a newer job arrives.
+      # To protect the master branch, use ${{ github.ref != 'refs/heads/main' }} for cancel-in-progress:
+      group: build-${{ github.ref }}
+      cancel-in-progress: true
     permissions:
       contents: read
       packages: read
@@ -406,6 +415,7 @@ jobs:
     needs: [docker-build-image-for-churchbulletin-ui]
     if: success()
     concurrency:
+      # This will protect deployments - there should be no cancellation.
       group: deploy-to-tdd-serialized
       cancel-in-progress: false
     runs-on: windows-latest
